Put quotes around tags for consistency

--- a/playbooks/roles/mongo_3_2/tasks/main.yml
+++ b/playbooks/roles/mongo_3_2/tasks/main.yml
@@ -57,9 +57,9 @@
     update_cache: yes
   with_items: "{{ mongodb_debian_pkgs }}"
   tags:
-    - install
-    - install:app-requirements
-    - mongo_packages
+    - "install"
+    - "install:app-requirements"
+    - "mongo_packages"
 
 - name: create mongo dirs
   file:
