--- a/playbooks/roles/mongo_3_2/defaults/main.yml
+++ b/playbooks/roles/mongo_3_2/defaults/main.yml
@@ -48,8 +48,8 @@ MONGO_AUTH: true
 MONGO_RS_CONFIG:
   members: []
 
-# Storage engine options in 3.0: "mmapv1" or "wiredTiger" 
-# As 3.2 and 3.4 default to wiredTiger, our 3.0 play will help future-proof
+# Storage engine options in 3.2: "mmapv1" or "wiredTiger"
+# 3.2 and 3.4 default to wiredTiger
 MONGO_STORAGE_ENGINE: "wiredTiger"
 
 # List of dictionaries as described in the mount_ebs role's default
