--- a/playbooks/roles/mongo_3_2/tasks/main.yml
+++ b/playbooks/roles/mongo_3_2/tasks/main.yml
@@ -195,7 +195,7 @@
   service:
     name: mongod
     state: restarted
-  when: update_mongod_conf.changed OR update_mongod_key.changed
+  when: update_mongod_conf.changed or update_mongod_key.changed
   tags:
     - "manage"
     - "manage:start"
