--- a/playbooks/roles/jenkins_common/defaults/main.yml
+++ b/playbooks/roles/jenkins_common/defaults/main.yml
@@ -4,6 +4,7 @@ jenkins_war_name: jenkins_1.651.3.war
 jenkins_war_url: https://s3.amazonaws.com/edx-testeng-tools/jenkins/{{ jenkins_war_name }}
 jenkins_home: /var/lib/jenkins
 java_home: /usr/lib/jvm/java-8-openjdk-amd64
+jenkins_configuration_git_url: https://github.com/edx/jenkins-configuration.git
 config_path: ""
 jenkins_port: 8080
 jenkins_debian_pkgs:
