remove config files for now

--- a/playbooks/roles/jenkins_common/defaults/main.yml
+++ b/playbooks/roles/jenkins_common/defaults/main.yml
@@ -5,9 +5,9 @@ jenkins_port: 8080
 jenkins_war_url: https://s3.amazonaws.com/edx-testeng-tools/jenkins/{{ jenkins_war_name }}
 jenkins_home: /var/lib/jenkins
 java_home: /usr/lib/jvm/java-8-openjdk-amd64
+git_path: /git
 jenkins_configuration_git_url: https://github.com/edx/jenkins-configuration.git
 jenkins_config_files: /init-configs
-jenkins_config_templates: "{{ role_path }}/files"
 
 jenkins_debian_pkgs:
   - git
