setup jenkins_build role

--- a/playbooks/roles/jenkins_common/tasks/main.yml
+++ b/playbooks/roles/jenkins_common/tasks/main.yml
@@ -40,22 +40,11 @@
     state: directory
     owner: ubuntu
 
-- name: Create plugins
+- name: Create plugins dir
   file:
     path: "{{ jenkins_home }}/plugins"
     state: directory
     owner: ubuntu
-
-- name: Create folder for git repositories
-  file:
-    path: /git
-    state: directory
-    owner: ubuntu
-
-- name: Download jenkins-configuration repo
-  git:
-      repo: "{{ jenkins_configuration_git_url }}"
-      dest: /git/jenkins-configuration
 
 - name: Make plugins directory
   file:
@@ -68,7 +57,7 @@
   get_url:
     url: "http://updates.jenkins-ci.org/download/plugins/{{ item.name }}/{{ item.version }}/{{ item.name }}.hpi"
     dest: "/tmp/{{ item.name }}_{{ item.version }}"
-  with_items: "{{ jenkins_pinned_plugins }}"
+  with_items: "{{ jenkins_plugins }}"
   register: jenkins_plugin_downloads
   tags:
     - install
@@ -93,12 +82,7 @@
   command: "touch {{ jenkins_home }}/plugins/{{ item.name }}.jpi.pinned"
   args:
     creates: "{{ jenkins_home }}/plugins/{{ item.name }}.jpi.pinned"
-  with_items: "{{ jenkins_pinned_plugins }}"
-
-- name: Copy config documents
-  copy:
-    src: "{{ jenkins_config_templates }}/*"
-    dest: "{{ jenkins_config_files }}/init-configs/"
+  with_items: "{{ jenkins_plugins }}"
 
 - name: Set owner for jenkins_home
   file:
